# Crypto-key-manager-system

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  go.mod  go.sum
pkg/domain/: key.go  user.go
services/crypto/: Cargo.toml  build.rs
services/crypto/src/: config.rs  error.rs  kms_client.rs  lib.rs  main.rs  server.rs
services/crypto/src/crypto/: aes.rs  error.rs  mod.rs  rsa.rs
services/crypto/tests/: crypto_server_tests.rs
services/gateway/cmd/server/: main.go
services/gateway/internal/client/: crypto_client.go  kms_client.go
services/gateway/internal/config/: config.go
services/gateway/internal/handler/: handler.go
services/gateway/internal/jwt/: jwt_manager.go
services/gateway/internal/middleware/: auth.go
services/gateway/internal/repository/: db.go  user_repo.go
services/gateway/internal/routes/: api.go  auth.go
services/gateway/internal/service/: api_service.go  auth_service.go  gateway_service.go
services/gateway/internal/session/: interface.go  store.go
services/gateway/internal/usererrors/: errors.go
services/kms/cmd/kms-client/: main.go
services/kms/cmd/server/: main.go
services/kms/internal/config/: config.go
services/kms/internal/domain/: key.go
services/kms/internal/handler/: grpc_errors.go  server.go
services/kms/internal/kmserrors/: errors.go
services/kms/internal/repository/: db.go  key_repo.go
services/kms/internal/service/: key_service.go
services/migrate/: Dockerfile
services/migrate/migrations/: 001_create_users_table.up.sql  002_create_keys_table.up.sql
