[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
envy = "0.4.2"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
ring = "0.17.14"


[build-dependencies]
tonic-prost-build = "0.14.5"
