[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.5"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
envy = "0.4.2"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
ring = "0.17.14"
rsa = "0.9.10"
rand = "0.8"
sha2 = "0.10.9"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tokio-stream = "0.1.18"
mockall = "0.14.0"

[build-dependencies]
tonic-prost-build = "0.14.5"
